--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <footer>
-    
-  </footer>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/1fc1497e59.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Home Page</title>
+  </head>
+  <body>
+    <header></header>
+
+    <!-- Include the footer from footer.html -->
+
+    <footer
+      style="
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        background-color: #fcf4d4;
+        left: 0;
+      "
+    >
+    <object type="text/html" data="./components/footer.html" style="width: 100%; height: 100%;"></object>
+
+    </footer>
+  </body>
 </html>
