--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       header {
         background-color: #fcf4d4;
-        padding: 15px 20px;
+
         display: flex;
       }
       #nav {
@@ -37,7 +37,7 @@
   <body>
     <header>
       <div>
-        <img src="./assets/icons/logo.png" alt="Logo" height="20" width="20" />
+        <img src="./assets/icons/re1.png" alt="Logo" height="50" width="50" />
       </div>
       <ul id="nav">
         <li><a href="#">HOME</a></li>
@@ -55,23 +55,20 @@
       "
     >
       <div>
-        <div >
+        <div>
           <span>
             <img
-              id="logo-image"
-              src="./assets/icons/logo.png"
+              src="./assets/icons/re1.png"
               alt="logo"
-              width="20"
+              width="50"
               ;
-              height="20"
+              height="50"
               ;
             />
-            <label for="logo-image">Logo</label>
           </span>
           <p>
-            This is a paraghraph which is a description of a company.build in
-            footer it is have a logo, social media, copyrights,that is an
-            example of what i learn.
+            Explore the world of books with our extensive library collection. 
+            Discover new stories, expand your knowledge, and embark on literary adventures.
           </p>
         </div>
 
@@ -82,8 +79,8 @@
           <i class="fa-regular fa-envelope"></i>
         </div>
       </div>
-      <div style="text-align: center; ">
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
+      <div style="text-align: center">
+        <p>&copy; 2024 Book Library. All rights reserved.</p>
       </div>
     </footer>
   </body>
