--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
   <body>
     <header>
       <div>
-        <img src="./assets/icons/re1.png" alt="Logo" height="50" width="50" />
+        <img src="./assets/icons/logo.png" alt="Logo" height="50" width="50" />
       </div>
       <ul id="nav">
         <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">BOOKS</a></li>
         <li><a href="#">CONTACT US</a></li>
       </ul>
     </header>
@@ -58,7 +58,7 @@
         <div>
           <span>
             <img
-              src="./assets/icons/re1.png"
+              src="./assets/icons/logo.png"
               alt="logo"
               width="50"
               ;
