--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" type="x-icon" href="./assets/icons/logo.png">
     <script
       src="https://kit.fontawesome.com/1fc1497e59.js"
       crossorigin="anonymous"
