--- a/index.html
+++ b/index.html
@@ -149,11 +149,27 @@
                 padding-left: 15px;
               "
             >
-              <i class="fas fa-user" style="height: 5px"></i>
+              <i class="fas fa-user"></i>
             </div>
           </div>
           <div class="input-box">
             <input type="text" placeholder="Email" required />
+            <div
+              class="icon"
+              style="
+                position: absolute;
+                z-index: 1;
+                padding-top: 10px;
+                padding-left: 15px;
+              "
+            >
+            <i class="fas fa-envelope"></i>
+
+
+
+
+            
+            </div>
           </div>
           <div class="message-box">
             <textarea placeholder="Message"></textarea>
