--- a/home.html
+++ b/home.html
@@ -34,21 +34,21 @@
           /></a>
         </div>
         <ul class="nav">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="bars">
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+      </ul>
+        <div class="bars" onclick="toggleMenu()">
           <i class="fa-solid fa-bars"></i>
         </div>
       </div>
       <div class="drop_menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </div>
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./services.html">Services</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+    </div>
       <div class="hero-text">
         <h2>
           GET THE BEST-SELLING <br />
@@ -212,5 +212,6 @@
         <p>&copy; 2024 Book Library. All rights reserved.</p>
       </div>
     </footer>
+    <script src="./JavaScript/script.js"></script>
   </body>
 </html>
