--- a/home.html
+++ b/home.html
@@ -105,30 +105,46 @@
 
       <div class="text">
         <h2>never estimate the power of dua</h2>
-        <p>
+        <p class="quote1">
           Moses prayed, “My Lord! Uplift my heart for me,and make my task
           easy,and remove the impediment from my tongue,so people may understand
-          my speech.<b>” quran 20:27-29”</b><br />
-
+          my speech.<b>” quran 20:27-29”</b>
+        </p>
+        <br />
+<p>
           If Allah were to hasten evil for people1 as they wish to hasten good,
           they would have certainly been doomed. But We leave those who do not
           expect to meet Us to wander blindly in their defiance.<b
             >”quran 10:11”</b
-          ><br />
+          >
+        </p><br />
+          <p>
           Yet there are others who say, “Our Lord! Grant us the good of this
           world and the Hereafter, and protect us from the torment of the Fire.
           <b>”quran 2:201”</b>
+        </p>
           <br />
+          <p>
           So be patient with your Lord’s decree, for you are truly under Our
           ˹watchful˺ Eyes. And glorify the praises of your Lord when you rise.
           <b>”quran 52:48”</b>
+        </p>
           <br />
+          <p>
           as for those who struggle in our cause, we will surely guide them
           along our way. and allah is certainly with the good doers.
           <b>” quran 29:69”</b>
-        </p>
+          </p>
       </div>
     </div>
+<div id="myModal" class="modal" style="display: none;">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2 id="quoteTitle"></h2>
+    <p id="quoteContent"></p>
+    <p id="quoteSource"></p>
+  </div>
+</div>
 
     <div class="contact-us">
       <div class="content">
