--- a/home.html
+++ b/home.html
@@ -140,9 +140,11 @@
 <div id="myModal" class="modal" style="display: none;">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <h2 id="quoteTitle"></h2>
+    <h2 id="quoteTitle" style="padding: 5px;"></h2>
     <p id="quoteContent"></p>
-    <p id="quoteSource"></p>
+  <b>
+      <p id="quoteSource"></p>
+  </b>
   </div>
 </div>
 
