--- a/home.html
+++ b/home.html
@@ -203,112 +203,347 @@
       <div class="col col-1" data-label="Name">الأسود يليق بك</div>
       <div class="col col-2" data-label="Publish date">2001</div>
       <div class="col col-3" data-label="Price">$10</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate">
+        <div class="container-star">
+          <div class="star-widget">
+            <input type="radio" name="rate" id="rate-5">
+            <label for="rate-5" class="fas fa-star"></label>
+            <input type="radio" name="rate" id="rate-4">
+            <label for="rate-4" class="fas fa-star"></label>
+            <input type="radio" name="rate" id="rate-3">
+            <label for="rate-3" class="fas fa-star"></label>
+            <input type="radio" name="rate" id="rate-2">
+            <label for="rate-2" class="fas fa-star"></label>
+            <input type="radio" name="rate" id="rate-1">
+            <label for="rate-1" class="fas fa-star"></label>
+            </div>
+      </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">To Kill a Mockingbird</div>
       <div class="col col-2" data-label="Publish date">1960</div>
       <div class="col col-3" data-label="Price">$12</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate1" id="rate-5-1">
+          <label for="rate-5-1" class="fas fa-star"></label>
+          <input type="radio" name="rate1" id="rate-4-1">
+          <label for="rate-4-1" class="fas fa-star"></label>
+          <input type="radio" name="rate1" id="rate-3-1">
+          <label for="rate-3-1" class="fas fa-star"></label>
+          <input type="radio" name="rate1" id="rate-2-1">
+          <label for="rate-2-1" class="fas fa-star"></label>
+          <input type="radio" name="rate1" id="rate-1-1">
+          <label for="rate-1-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">الرجال من الشمس</div>
       <div class="col col-2" data-label="Publish date">1962</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate2-3" id="rate-5-2">
+          <label for="rate-5-2" class="fas fa-star"></label>
+          <input type="radio" name="rate2-3" id="rate-4-2">
+          <label for="rate-4-2" class="fas fa-star"></label>
+          <input type="radio" name="rate2-3" id="rate-3-2">
+          <label for="rate-3-2" class="fas fa-star"></label>
+          <input type="radio" name="rate2-3" id="rate-2-2">
+          <label for="rate-2-2" class="fas fa-star"></label>
+          <input type="radio" name="rate2-3" id="rate-1-2">
+          <label for="rate-1-2" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">ثلاثية غرناطة</div>
       <div class="col col-2" data-label="Publish date">1994</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate3-4" id="rate-5-3">
+          <label for="rate-5-3" class="fas fa-star"></label>
+          <input type="radio" name="rate3-4" id="rate-4-3">
+          <label for="rate-4-3" class="fas fa-star"></label>
+          <input type="radio" name="rate3-4" id="rate-3-3">
+          <label for="rate-3-3" class="fas fa-star"></label>
+          <input type="radio" name="rate3-4" id="rate-2-3">
+          <label for="rate-2-3" class="fas fa-star"></label>
+          <input type="radio" name="rate3-4" id="rate-1-3">
+          <label for="rate-1-3" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">أولاد حارتنا</div>
       <div class="col col-2" data-label="Publish date">1959</div>
       <div class="col col-3" data-label="Price">$18</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate4" id="rate-5-4">
+          <label for="rate-5-4" class="fas fa-star"></label>
+          <input type="radio" name="rate4" id="rate-4-4">
+          <label for="rate-4-4" class="fas fa-star"></label>
+          <input type="radio" name="rate4" id="rate-3-4">
+          <label for="rate-3-4" class="fas fa-star"></label>
+          <input type="radio" name="rate4" id="rate-2-4">
+          <label for="rate-2-4" class="fas fa-star"></label>
+          <input type="radio" name="rate4" id="rate-1-4">
+          <label for="rate-1-4" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">العمدة عزمي</div>
       <div class="col col-2" data-label="Publish date">1977</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">The Catcher in the Rye</div>
       <div class="col col-2" data-label="Publish date">1951</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
 
     <li class="table-row">
       <div class="col col-1" data-label="Name">The Great Gatsby</div>
       <div class="col col-2" data-label="Publish date">1925</div>
       <div class="col col-3" data-label="Price">$9</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">Les Misérables</div>
       <div class="col col-2" data-label="Publish date">1862</div>
       <div class="col col-3" data-label="Price">$7</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">أنا كنت شماساً</div>
       <div class="col col-2" data-label="Publish date">2004</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">ثلاثية القاهرة</div>
       <div class="col col-2" data-label="Publish date">1956</div>
       <div class="col col-3" data-label="Price">$16</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">One Hundred Years of Solitude</div>
       <div class="col col-2" data-label="Publish date">1967</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
 
     <li class="table-row">
       <div class="col col-1" data-label="Name">أرض النفاق</div>
       <div class="col col-2" data-label="Publish date">1946</div>
       <div class="col col-3" data-label="Price">$11</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">Anna Karenina" by Leo Tolstoy</div>
       <div class="col col-2" data-label="Publish date">1878</div>
       <div class="col col-3" data-label="Price">$10</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
 
     <li class="table-row">
       <div class="col col-1" data-label="Name">الطريق إلى القدس</div>
       <div class="col col-2" data-label="Publish date">2008</div>
       <div class="col col-3" data-label="Price">$20</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">Crime and Punishment</div>
       <div class="col col-2" data-label="Publish date">1866</div>
       <div class="col col-3" data-label="Price">$12</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">في قلبي انثى عبرية</div>
       <div class="col col-2" data-label="Publish date">1994</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
     <li class="table-row">
       <div class="col col-1" data-label="Name">اين المفر</div>
       <div class="col col-2" data-label="Publish date">1994</div>
       <div class="col col-3" data-label="Price">$15</div>
-      <div class="col col-4" data-label="rate">Pending</div>
+      <div class="col col-4" data-label="rate"><div class="container-star">
+        <div class="star-widget">
+          <input type="radio" name="rate" id="rate-5">
+          <label for="rate-5" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-4">
+          <label for="rate-4" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-3">
+          <label for="rate-3" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-2">
+          <label for="rate-2" class="fas fa-star"></label>
+          <input type="radio" name="rate" id="rate-1">
+          <label for="rate-1" class="fas fa-star"></label>
+          </div>
+    </div></div>
     </li>
 
   </ul>
