--- a/home.html
+++ b/home.html
@@ -164,7 +164,8 @@
         <div class="swiper-slide">"الطريق إلى القدس" - يوسف زيدان: "الحب ليس له دين، ولا وطن، ولا لون، إنه فقط شعور"</div>
         <div class="swiper-slide">"ثلاثية غرناطة" - رضوى عاشور: "ليس للإنسان أن ينسى، ولكنه يستطيع أن يتناسى"</div>
       </div>
-      
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
       <div class="swiper-pagination"></div>
     </div>
   </div>
