--- a/ProductDisplayPage.html
+++ b/ProductDisplayPage.html
@@ -182,7 +182,7 @@ margin-top: auto;
         <div class="container flex">
           <div class="left">
             <div class="main_image">
-              <img src="./assets/images/image.png" class="slide" style="height: 450px;">
+              <img src="" class="slide" style="height: 450px;">
             </div>
             <div class="option flex">
               <img src="./assets/images/image.png" onclick="img('./assets/images/image.png')">
@@ -194,9 +194,9 @@ margin-top: auto;
             </div>
           </div>
           <div class="right">
-            <h3>Beats Solo3 Wireless</h3>
-            <h4> <small>$</small>999.99 </h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <h3></h3>
+            <h4> <small>$</small> </h4>
+            <p></p>
             
             <h5>Number</h5>
             <div class="add flex1">
@@ -241,7 +241,9 @@ margin-top: auto;
         <p>&copy; 2024 Book Library. All rights reserved.</p>
       </div>
     </footer>
-    <script src="./JavaScript/script.js"></script>
+    <script src="./JavaScript/book.js"></script>
+    <script src="./JavaScript/details.js"></script>
+  
     <script>
       function img(anything) {
         document.querySelector('.slide').src = anything;
